--- a/Hawaii/UI/Storyboard/Dashboard.storyboard
+++ b/Hawaii/UI/Storyboard/Dashboard.storyboard
@@ -456,11 +456,11 @@
             </objects>
             <point key="canvasLocation" x="3694" y="-656"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Dashboard-->
         <scene sceneID="awH-qa-5aA">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bRN-9c-16X" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="bookmarks" id="uem-IX-GPx"/>
+                    <tabBarItem key="tabBarItem" title="Dashboard" image="calendar" id="uem-IX-GPx"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="1CL-Hb-JgW">
@@ -488,7 +488,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rre-HC-BMC">
                                 <rect key="frame" x="20" y="10" width="374" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="labelFont" value="fontPrimary"/>
@@ -541,7 +541,9 @@
                         <viewLayoutGuide key="safeArea" id="73J-fT-pgL"/>
                     </view>
                     <connections>
+                        <outlet property="endDateLabel" destination="JJR-yx-EbL" id="u91-MF-qEg"/>
                         <outlet property="endDatePicker" destination="B30-ko-KnE" id="AQg-oD-cDm"/>
+                        <outlet property="startDateLabel" destination="rre-HC-BMC" id="3Q8-hJ-Agf"/>
                         <outlet property="startDatePicker" destination="EeG-bj-h9t" id="tBf-Ai-wKe"/>
                     </connections>
                 </viewController>
@@ -589,7 +591,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HOLIDAY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tkr-6z-WNa">
-                                <rect key="frame" x="19.999999999999993" y="0.0" width="102.33333333333331" height="30"/>
+                                <rect key="frame" x="20.000000000000007" y="0.0" width="102.66666666666669" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="5fm-Hx-gfF"/>
                                 </constraints>
@@ -632,19 +634,19 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taken" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8lJ-4U-t06">
-                                <rect key="frame" x="36.666666666666671" y="91" width="42.666666666666671" height="19.333333333333329"/>
+                                <rect key="frame" x="36.666666666666664" y="91" width="42.999999999999993" height="19.666666666666671"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pending" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jei-Iu-umK">
-                                <rect key="frame" x="20.000000000000004" y="117.33333333333333" width="59.333333333333343" height="19.333333333333329"/>
+                                <rect key="frame" x="19.999999999999996" y="117.66666666666667" width="59.666666666666657" height="19.000000000000014"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="05" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k7P-r6-3gB">
-                                <rect key="frame" x="95.666666666666671" y="84" width="27" height="26.333333333333329"/>
+                                <rect key="frame" x="95.666666666666671" y="84" width="27" height="26.666666666666671"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -656,25 +658,25 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="days" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRS-EX-H1C">
-                                <rect key="frame" x="130.66666666666666" y="92.333333333333329" width="32.333333333333343" height="18"/>
+                                <rect key="frame" x="130.66666666666666" y="92.666666666666671" width="32.333333333333343" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remaining" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w5p-4a-a2b">
-                                <rect key="frame" x="241.66666666666666" y="91" width="75.666666666666657" height="19.333333333333329"/>
+                                <rect key="frame" x="241" y="91" width="76" height="19.666666666666671"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="days" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ob-v5-jZQ">
-                                <rect key="frame" x="361.66666666666669" y="92.333333333333329" width="32.333333333333314" height="18"/>
+                                <rect key="frame" x="361.66666666666669" y="92.666666666666671" width="32.333333333333314" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="16" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vex-0D-Xio">
-                                <rect key="frame" x="330.33333333333331" y="84" width="23.666666666666686" height="26.333333333333329"/>
+                                <rect key="frame" x="330" y="84" width="24" height="26.666666666666671"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -725,6 +727,9 @@
             <point key="canvasLocation" x="7629" y="-1604"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="calendar" width="25" height="25"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="g7F-bN-lNv"/>
         <segue reference="ntj-IY-5Sk"/>
