--- a/Hawaii/UI/Storyboard/Approve.storyboard
+++ b/Hawaii/UI/Storyboard/Approve.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aC0-w3-KiA">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
@@ -41,11 +41,13 @@
             </objects>
             <point key="canvasLocation" x="972" y="178.56071964017991"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Approve-->
         <scene sceneID="KQQ-i8-ZFU">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gc1-LA-eAL" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Approve" image="airplane_mode_on" id="KeV-4t-7VP"/>
                     <toolbarItems/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aJX-lh-v0C">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -60,4 +62,7 @@
             <point key="canvasLocation" x="32.799999999999997" y="178.56071964017991"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="airplane_mode_on" width="30" height="30"/>
+    </resources>
 </document>
